Fixed testimonials not visible on mobile devices

--- a/src/container/Testimonials/Testimonials.scss
+++ b/src/container/Testimonials/Testimonials.scss
@@ -267,7 +267,7 @@
 		display: none !important;
 	}
 	.myCarousel {
-		background: #fafafa;
+		background: var(--primary-color);
 		margin-top: -9%;
 		width: 88%;
 		margin-left: auto;
@@ -276,7 +276,7 @@
 		padding-bottom: 12.5%;
 		padding-left: 5%;
 		padding-right: 5%;
-		border: 1px solid var(--secondary-color);
+		border: 1px solid var(--black-color);
 		height: 269px;
 	}
 
